<resources>
    <string name="app_name">Podypus</string>
    <string name="title_home">Podcasts</string>
    <string name="title_search">Search</string>
    <string name="title_player">Player</string>
    <string name="app_label">Podypus</string>
    <string name="search_hint">Search podcasts</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">User</string>
    <string name="subscribe">Subscribe</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Player</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Register</string>
    <string name="next">Next</string>
    <string name="previous">Back to login</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Authentication View strings -->
    <string name="register">Register</string>
    <string name="registerprompt">Don\'t have an account?</string>
    <string name="login">Log in</string>
    <string name="usericondescription">User</string>
    <string name="lockicondescription">User</string>
    <string name="user">Username</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="authenticated">false</string>
    <string name="authenticated_default">false</string>
</resources>
