<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.434" />

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="313dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="142dp"
        android:layout_height="53dp"
        android:layout_marginBottom="148dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail"
        app:layout_constraintVertical_bias="0.139" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="313dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsername" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="313dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <ImageView
        android:id="@+id/loginLockIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lockicondescription"
        android:src="@drawable/ic_lock_24px"
        app:layout_constraintBottom_toBottomOf="@+id/registerPassword"
        app:layout_constraintEnd_toStartOf="@+id/registerPassword"
        app:layout_constraintTop_toTopOf="@+id/registerPassword" />

    <ImageView
        android:id="@+id/loginUserIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/usericondescription"
        android:src="@drawable/ic_person_24px"
        app:layout_constraintBottom_toBottomOf="@+id/registerUsername"
        app:layout_constraintEnd_toStartOf="@+id/registerUsername"
        app:layout_constraintTop_toTopOf="@+id/registerUsername" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/registerEmail"
        app:layout_constraintEnd_toStartOf="@+id/registerEmail"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword"
        app:srcCompat="@drawable/ic_mail_24px" />
</androidx.constraintlayout.widget.ConstraintLayout>